# pc-status-monorepo-rs

./: .gitignore  Cargo.toml  INSTALL.md  INSTALL_en.md  README.en.md  README.md
.cargo/: config.toml
.github/workflows/: build.yml  frontend.yml  nextjs.yml  pages.yml
client/: .env.example  Cargo.toml  build.rs  temp_dxdiag.txt
client/src/: gpu.rs  main.rs  sysinfo_instance.rs  system_info.rs  updater.rs  uptime_formatter.rs
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml
frontend/Utils/: formatUptime.ts  selectIcon.ts
frontend/components/: CanvasChart.tsx  focus.tsx  loadingScreen.tsx  status.tsx
frontend/hooks/: useToast.ts  useWebSocket.ts
frontend/pages/: index.tsx
frontend/pages/focus/: [hostname].tsx
frontend/types/: status.ts
server/: .env.example  Cargo.toml
server/src/: client_manager.rs  http_server.rs  main.rs  websocket.rs
shared/: Cargo.toml
shared/src/: lib.rs  messages.rs  types.rs
systemd/: pc-status-client.service  pc-status-server.service
